Added slider for interactivity, gonna remove the buttons

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <input type="button" value="16x16" class="button16 button">
         <input type="button" value="32x32" class="button32 button">
         <input type="button" value="64x64" class="button64 button">
+        <input type="range" name="Grid Layout" id="grid-layout-slider" min="0" max="100" >
     </div>
 </div>
 
