--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
       </div>
     </div>
 
-    <script src="/scripts/index-script.js"></script>
+    <script src="scripts/index-script.js"></script>
   </body>
 </html>
